# gibs

./: .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS.md  CMakeLists.txt  LICENSE.txt  README.md  gibs.doxyfile  gibs.pro  ibs.doxyfile  ibs.pro
deployment/: gibs.desktop
doc/branding/: milo-doxygen.scss
gibs/: gibs.pro
gibs/resources/: resources.qrc
gibs/src/: baseparser.cpp  baseparser.h  commandparser.cpp  compiler.cpp  compiler.h  deployer.cpp  deployer.h  fileinfo.cpp  fileinfo.h  fileparser.cpp  fileparser.h  flags.h  gibs.cpp  gibs.h  globals.h  main.cpp  metaprocess.h  projectmanager.cpp  projectmanager.h  scope.cpp  scope.h  tags.h
ibs/: ibs.pro
ibs/src/: baseparser.cpp  baseparser.h  commandparser.cpp  commandparser.h  fileparser.cpp  fileparser.h  flags.h  globals.h  ibs.cpp  ibs.h  main.cpp  metaprocess.cpp  metaprocess.h  projectmanager.cpp  projectmanager.h  scope.cpp  scope.h  tags.h
milo/mconfig/: README.md  mconfig.cpp  mconfig.h  mconfig.pri
milo/mlog/: README.md  mlog.cpp
milo/mscripts/: README.md
qtheadermapper/: main.cpp
samples/simpletest-feature/: custom-test-run.sh  main.cpp  simpletestfeature.pro
samples/simpletest-folder/: simpletest_folder.pro
samples/simpletest-subproject-static/: custom-test-run.sh  simpletest-subproject-static.pro
samples/simpletestifdefs/: main.cpp  someclass.cpp
scripts/: deploy-linux.sh  run-compilation-tests.sh
src/: log.cpp  log.h  main.cpp
testData/simplest/: main.cpp  someclass.cpp  someclass.h
testData/simpletest-externallib/: main.cpp  simpletest.pro
tests/: tests.pro
(+29 files in other folders)
